<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name" translatable="false">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value" translatable="false">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add whipped cream? <xliff:g example="true" id="addWhippedCream">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add chocolate? <xliff:g example="true" id="addChocolate">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g example="$10" id="price">%s</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="order_summary_email_subject">Just Java order for <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="no_email_client_message">No email client installed in this device.</string>
    <string name="max_coffee_message">You cannot have more than <xliff:g example="100" id="quantity">%d</xliff:g> coffee</string>
    <string name="min_coffee_message">"You cannot have less than <xliff:g example="1" id="quantity">%d</xliff:g> coffee"</string>
</resources>